Use add-opens for LTW aspect tests on JDK 16+
This is needed until we upgrade past AspectJ 1.9.21.1 which we can't do as long as we are building with < JDK 17.